--- a/src/main/resources/templates/index.html
+++ b/src/main/resources/templates/index.html
@@ -2,9 +2,58 @@
 <html lang="en">
 <head>
     <meta charset="UTF-8">
-    <title>Title</title>
+    <title>Xưởng J6</title>
+    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/css/bootstrap.min.css" rel="stylesheet"
+          integrity="sha384-QWTKZyjpPEjISv5WaRU9OFeRpok6YctnYmDr5pNlyT2bRjXh0JMhjY6hW+ALEwIH" crossorigin="anonymous">
+    <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap-icons@1.11.3/font/bootstrap-icons.min.css">
+    <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/js/bootstrap.bundle.min.js"
+            integrity="sha384-YvpcrYf0tY3lHB60NNkmXc5s9fDVZLESaAA55NDzOxhy9GkcIdslK1eN7N6jIeHz"
+            crossorigin="anonymous"></script>
+    <link rel="stylesheet" href="style.css">
+    <link rel="shortcut icon" href="./images/sun.png" type="image/x-icon">
 </head>
 <body>
-    <h1>Hello world</h1>
+<div class="total">
+    <h2>Product</h2>
+    <div class="main">
+        <form action="" method="">
+            <div class="form-row d-flex ">
+                <div class="form-group col-sm-2 search">
+                    <label for="productName">Name:</label>
+                    <input type="text" id="productName" class="form-control">
+                </div>
+                <div class="form-group col-sm-2 search">
+                    <label for="productPrice">Price:</label>
+                    <input type="text" id="productPrice" class="form-control">
+                </div>
+                <div class="form-group col-sm-2 search">
+                    <label>Brand</label>
+                    <select class="form-control">
+                        <option value="">1</option>
+                        <option value="">2</option>
+                    </select>
+                </div>
+                <div class="form-group col-sm-2 search">
+                    <label>Category</label>
+                    <select class="form-control">
+                        <option value="">1</option>
+                        <option value="">2</option>
+                    </select>
+                </div>
+                <div class="form-group col-sm-2 search">
+                    <label>Status</label>
+                    <select class="form-control">
+                        <option value="">1</option>
+                        <option value="">2</option>
+                    </select>
+                </div>
+                <div class="btn btn-primary">
+                    <i class="bi bi-search"></i>
+                </div>
+
+            </div>
+        </form>
+    </div>
+</div>
 </body>
 </html>
